# verbose-potato

./: .coveragerc  .dockerignore  .env.example  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  publish-image.yml  release.yml
docs/: architecture.md  development_guide.md  requirements_specification.md  testing_strategy.md
scripts/: update_version.py
src/: config.py  main.py
src/modules/auth/application/dtos/: base_auth_dto.py  create_first_librarian_dto.py
src/modules/auth/application/use_cases/: create_first_librarian_use_case.py
src/modules/auth/domain/entities/: user_entity.py
src/modules/auth/domain/exceptions/: credentials_exception.py  user_exception.py
src/modules/auth/domain/ports/outbound/: password_hash_outbound_port.py
src/modules/auth/domain/ports/repositories/: user_repository_port.py
src/modules/auth/domain/value_objects/: email_vo.py  name_vo.py  password_hash_vo.py  plain_password_vo.py
src/modules/auth/infrastructure/persistence/models/: user_model.py
src/shared/domain/entities/: base_entity.py
src/shared/domain/enums/: user_role_enum.py
src/shared/domain/exceptions/: base_exception.py  cache_exception.py
src/shared/domain/ports/outbound/: cache_outbound_port.py  logger_factory_outbound_port.py  logger_outbound_port.py
src/shared/domain/ports/unit_of_work/: unit_of_work_port.py
src/shared/domain/value_objects/: base_value_object.py  cache_entry_vo.py  cache_key_vo.py  cache_ttl_vo.py  cache_value_vo.py
src/shared/infrastructure/cache/: redis_client.py
src/shared/infrastructure/database/: database.py
src/shared/infrastructure/database/alembic/: env.py  script.py.mako
src/shared/infrastructure/database/alembic/versions/: dddf262b5bf8_create_user_model.py
src/shared/infrastructure/logging/: structlog_configure_logging.py
src/shared/infrastructure/outbound/: redis_cache_outbound_adapter.py  structlog_logger_factory_outbound_adapter.py  structlog_logger_outbound_adapter.py
src/shared/infrastructure/persistence/models/: base_model.py
src/shared/presentation/api/compositions/: infrastructure_composition.py
src/shared/presentation/api/middleware/: correlation_id_middleware.py
src/shared/presentation/api/schemas/: schema.py
tests/: test_sample.py
tests/e2e/: conftest.py  test_main.py
tests/integration/: conftest.py
tests/integration/shared/infrastructure/cache/: test_redis_client.py
tests/integration/shared/infrastructure/database/: test_database.py
tests/integration/shared/infrastructure/outbound/: test_redis_cache_outbound_adapter.py
tests/integration/shared/presentation/api/middleware/: test_correlation_id_middleware.py
tests/unit/: conftest.py
tests/unit/modules/auth/domain/entities/: test_user_entity.py
tests/unit/shared/domain/value_objects/: test_base_value_object.py  test_cache_entry_vo.py  test_cache_key_vo.py  test_cache_ttl_vo.py  test_cache_value_vo.py
tests/unit/shared/infrastructure/outbound/: test_structlog_logger_factory_outbound_adapter.py  test_structlog_logger_outbound_adapter.py
(+5 files in other folders)
