[project]
name = "verbose-potato"
version = "1.4.0"
description = "Verbose Potato is a REST API for library management, developed as a practice project to apply Hexagonal Architecture (Ports & Adapters)."
authors = [
    {name = "JohannGaviria"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "redis (>=8.0.1,<9.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.21,<0.16.0"
mypy = ">=2.3.0,<3.0.0"
pre-commit = ">=4.6.0,<5.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=9.1.1,<10.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
pytest-dotenv = ">=0.5.2,<0.6.0"
pytest-cov = ">=7.1.0,<8.0.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


# =========================
# PYTEST CONFIG
# =========================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["*/alembic/*", "*/conftest.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# =========================
# RUFF CONFIG
# =========================

[tool.ruff]
target-version = "py312"
line-length = 88
fix = true

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "alembic",
    "build",
    "dist"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "D",
]

ignore = [
    "E501",
    "B008",
]

extend-safe-fixes = [
    "W291",
    "W293",
]

[tool.ruff.lint.isort]
known-first-party = ["verbose_potato"]
case-sensitive = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106"]
"src/shared/infrastructure/database/alembic/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# =========================
# MYPY CONFIG
# =========================

[tool.mypy]
python_version = "3.12"

warn_unused_configs = true
warn_unused_ignores = false

strict_optional = true
check_untyped_defs = true

disallow_untyped_defs = true
disallow_untyped_calls = false

ignore_missing_imports = false

exclude = [
    "migrations/",
]

[[tool.mypy.overrides]]
module = [
    "pydantic.*",
    "pydantic_settings.*"
]
ignore_errors = true

#[[tool.mypy.overrides]]
#module = [
#    "tests.e2e.*",
#    "tests.integration.*",
#    "tests.unit.*"
#]
#disallow_untyped_defs = false
